--- a/svab_nxt/AndroidManifest.xml
+++ b/svab_nxt/AndroidManifest.xml
@@ -74,6 +74,11 @@
             android:label="@string/app_name"
             android:screenOrientation="landscape" />
         
+        <activity
+            android:name="svb.nxt.robot.game.GamePrintFoto"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" />
+        
     </application>
 
 </manifest>
