--- a/svab_nxt/AndroidManifest.xml
+++ b/svab_nxt/AndroidManifest.xml
@@ -12,18 +12,25 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.CAMERA" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    
-    <uses-feature android:name="android.hardware.camera" android:required="false" />
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
-    <uses-feature android:name="android.hardware.camera.front" android:required="false" />
-    <uses-feature android:name="android.hardware.camera.front.autofocus" android:required="false" />    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.front"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.front.autofocus"
+        android:required="false" />
 
     <application
         android:icon="@drawable/logo_new"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <activity
             android:name="svb.nxt.robot.activity.MainMenuActivity"
             android:label="@string/app_name" >
@@ -33,52 +40,46 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name="svb.nxt.robot.activity.DeviceListActivity"
-            android:label=""            
+            android:label=""
             android:theme="@android:style/Theme.Holo.Light.Dialog" />
-        
         <activity
             android:name="svb.nxt.robot.game.GameReadLine"
-            android:screenOrientation="portrait"
-            android:label="@string/app_name" />
-         
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
         <activity
             android:name="svb.nxt.robot.game.GameMoveAccelerometer"
-            android:screenOrientation="portrait"
-            android:label="@string/app_name" />
-        
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
         <activity
             android:name="svb.nxt.robot.game.GameMoveDirectionActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape" />
-        
         <activity
             android:name="svb.nxt.robot.game.GameMoveMotorActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape" />
-        
         <activity
             android:name="svb.nxt.robot.game.GameMoveColorActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" />               
-        
-        <activity
-            android:name="svb.nxt.robot.game.GamePrinterTest"
-            android:label="@string/app_name"
             android:screenOrientation="landscape" />
-        
         <activity
             android:name="svb.nxt.robot.game.GameSegwayMove"
             android:label="@string/app_name"
             android:screenOrientation="landscape" />
-        
         <activity
-            android:name="svb.nxt.robot.game.GamePrintFoto"
+            android:name="svb.nxt.robot.game.GamePrinterTest"
             android:label="@string/app_name"
             android:screenOrientation="landscape" />
-        
+        <activity
+            android:name="svb.nxt.robot.game.GamePrintTest2"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name="svb.nxt.robot.game.GamePenPrinter"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
