--- a/svab_nxt/AndroidManifest.xml
+++ b/svab_nxt/AndroidManifest.xml
@@ -81,6 +81,10 @@
             android:name="svb.nxt.robot.game.GamePenPrinter"
             android:label="@string/app_name"
             android:screenOrientation="landscape" />
+        <activity
+            android:name="svb.nxt.robot.game.GameDrillPrinter"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
