--- a/svab_nxt/.project
+++ b/svab_nxt/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>svab_nxt_android</name>
+	<name>svb_nxt_android</name>
 	<comment></comment>
 	<projects>
 	</projects>
